# course_work_2

./: .gitignore  COURSE_WORK.mwb  COURSE_WORK.mwb.bak  CREATE_DB.sql  CREATE_DB_USER.sql  DATA_MASSIVE.sql  pyproject.toml  requirements.txt
scripts/: entrypoint.sh
src/: main.py
src/api/: courses.py  payment.py  users.py
src/core/: app.py  config.py  db.py  utils.py
src/schemas/: users.py
src/services/: __init__.py  courses.py  payment.py  users.py
